fix for spacing between Dots using parent's padding

--- a/scrlDots.css
+++ b/scrlDots.css
@@ -8,13 +8,20 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
-.circle{
+.parent{
+    display: flex;
+    flex-wrap: wrap;
     flex: 0 1 20%;
-    padding-top: 20%;
+    border: none;
+    /* background-color: red; */
+    padding: 2.5%;
+}
+.circle{
+    flex: 0 1 100%;
+    padding-top: 100%;
     /* padding: 15%; */
     background-color: black;
     border-radius: 50%;
     text-align: center;
     color: beige;
-    /* margin: 1%; */
 }
